src/syntax/tests/snapshots/ppl__syntax__tests__empty_block.error.snap
---
source: src/syntax/tests/mod.rs
expression: err
---
Error: parser::empty_block

  × empty blocks are disallowed
   ╭─[empty_block.ppl:1:1]
 1 │ loop:
   · ──┬─
   ·   ╰── this item has empty block
   ╰────
